k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  # We are going to have 3 pods running the specified images below
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      # At least one label that we put here must match up the label defined in the selector
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: alejotem11/multi-server
          ports:
            - containerPort: 5000
