k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: alejotem11/multi-worker
          # There is no need to open any port inside this container because no object inside the cluster needs to access it. As such the multi-worker does not need to have any port assigned to it and it does not have to need any service assigned to it either
